--- a/templates/recursor.conf.erb
+++ b/templates/recursor.conf.erb
@@ -91,57 +91,89 @@ disable-dns=<% @disable_edns %>
 # disable-edns-ping	Disable EDNSPing
 #
 # disable-edns-ping=no
-
+<% if @disable_edns_ping -%>
+disable-edns-ping=<% @disable_edns_ping %>
+<% end -%>
 
 #################################
 # disable-packetcache	Disable packetcache
 #
 # disable-packetcache=no
+<% if @disable_packetcache -%>
+disable-packetcache=<% @disable_packetcache -%>
+<% end -%>
 
 #################################
 # dont-query	If set, do not query these netmasks for DNS data
 #
 # dont-query=127.0.0.0/8, 10.0.0.0/8, 192.168.0.0/16, 172.16.0.0/12, ::1/128, fe80::/10
+<% if @dont_query -%>
+dont-query=<%= @dont_query.join(',') %>
+<% end -%>
 
 #################################
 # entropy-source	If set, read entropy from this file
 #
 # entropy-source=/dev/urandom
+<% if @entropy_source -%>
+entropy-source=<% @entropy_source %>
+<% end -%>
 
 #################################
 # etc-hosts-file	Path to 'hosts' file
 #
 # etc-hosts-file=/etc/hosts
+<% if @etc_hosts_file -%>
+etc-hosts-file=<% @etc_hosts_file %>
+<% end -%>
 
 #################################
 # export-etc-hosts	If we should serve up contents from /etc/hosts
 #
 # export-etc-hosts=off
+<% if @export_etc_hosts -%>
+export-etc-hosts=<% @export_etc_hosts %>
+<% end -%>
 
 #################################
 # forward-zones	Zones for which we forward queries, comma separated domain=ip pairs
 #
 # forward-zones=
+<% if @forward_zones -%>
+forward-zones=<% @forward_zones %>
+<% end -%>
 
 #################################
 # forward-zones-file	File with (+)domain=ip pairs for forwarding
 #
 # forward-zones-file=
+<% if @forward_zones_file -%>
+forward-zones-file=<% @forward_zones_file %>
+<% end -%>
 
 #################################
 # forward-zones-recurse	Zones for which we forward queries with recursion bit, comma separated domain=ip pairs
 #
 # forward-zones-recurse=
+<% if @forward_zones_recurse -%>
+forward-zones-recurse=<% @forward_zones_recurse %>
+<% end -%>
 
 #################################
 # hint-file	If set, load root hints from this file
 #
 # hint-file=
+<% if @hint_file -%>
+hint-file=<% @hint_file %>
+<% end -%>
 
 #################################
 # ignore-rd-bit	Assume each packet requires recursion, for compatability
 #
 # ignore-rd-bit=off
+<% if @ignore_rd_bit -%>
+ignore-rd-bit=<% @ignore_rd_bit %>
+<% end -%>
 
 #################################
 # local-address	IP addresses to listen on, separated by spaces or commas. Also accepts ports.
@@ -157,178 +189,289 @@ local-port=54
 # log-common-errors	If we should log rather common errors
 #
 # log-common-errors=yes
+<% if @log_common_errors -%>
+log-common-errors=<% @log_common_errors %>
+<% end -%>
 
 #################################
 # logging-facility	Facility to log messages as. 0 corresponds to local0
 #
 # logging-facility=
+<% if @logging_facility -%>
+logging-facility=<% @logging_facility %>
+<% end -%>
 
 #################################
 # lua-dns-script	Filename containing an optional 'lua' script that will be used to modify dns answers
 #
 # lua-dns-script=
+<% if @lua_dns_script -%>
+lua-dns-script=<% @lua_dns_script %>
+<% end -%>
 
 #################################
 # max-cache-entries	If set, maximum number of entries in the main cache
 #
 # max-cache-entries=1000000
+<% if @max_cache_entries -%>
+max-cache-entries=<% @max_cache_entries %>
+<% end -%>
 
 #################################
 # max-cache-ttl	maximum number of seconds to keep a cached entry in memory
 #
 # max-cache-ttl=86400
+<% if @max_cache_ttl -%>
+max-cache-ttl=<% @max_cache_ttl %>
+<% end -%>
 
 #################################
 # max-mthreads	Maximum number of simultaneous Mtasker threads
 #
 # max-mthreads=2048
+<% if @max_mthreads -%>
+max-mthreads=<% @max_mthreads %>
+<% end -%>
 
 #################################
 # max-negative-ttl	maximum number of seconds to keep a negative cached entry in memory
 #
 # max-negative-ttl=3600
+<% if @max_negative_ttl -%>
+max-negative-ttl=<% @max_negative_ttl %>
+<% end -%>
 
 #################################
 # max-packetcache-entries	maximum number of entries to keep in the packetcache
 #
 # max-packetcache-entries=500000
+<% if @max_packetcache_entries -%>
+max-packetcache-entries=<% @max_packetcache_entries %>
+<% end -%>
 
 #################################
 # max-tcp-clients	Maximum number of simultaneous TCP clients
 #
 # max-tcp-clients=128
+<% if @max_tcp_clients -%>
+max-tcp-clients=<% @max_tcp_clients %>
+<% end -%>
 
 #################################
 # max-tcp-per-client	If set, maximum number of TCP sessions per client (IP address)
 #
 # max-tcp-per-client=0
+<% if @max_tcp_per_client -%>
+max-tcp-per-client=<% @max_tcp_per_client %>
+<% end -%>
 
 #################################
 # network-timeout	Wait this nummer of milliseconds for network i/o
 #
 # network-timeout=1500
+<% if @network_timeout -%>
+network-timeout=<% @network_timeout %>
+<% end -%>
 
 #################################
 # no-shuffle	Don't change
 #
 # no-shuffle=off
+<% if @no_shuffle -%>
+no-shuffle=<% @no_shuffle -%>
+<% end -%>
 
 #################################
 # packetcache-servfail-ttl	maximum number of seconds to keep a cached servfail entry in packetcache
 #
 # packetcache-servfail-ttl=60
+<% if @packetcache_servfail_ttl -%>
+packetcache-servfail-ttl=<% @packetcache_servfail_ttl %>
+<% end -%>
 
 #################################
 # packetcache-ttl	maximum number of seconds to keep a cached entry in packetcache
 #
 # packetcache-ttl=3600
+<% if @packetcache_ttl -%>
+packetcache-ttl=<% @packetcache_ttl %>
+<% end -%>
 
 #################################
 # pdns-distributes-queries	If PowerDNS itself should distribute queries over threads (EXPERIMENTAL)
 #
 # pdns-distributes-queries=no
+<% if @pdns_distributes_queries -%>
+pdns-distributes-queries=<% @pdns_distributes_queries %>
+<% end -%>
 
 #################################
 # processes	Launch this number of processes (EXPERIMENTAL, DO NOT CHANGE)
 #
 # processes=1
+<% if @processes -%>
+processes=<% @processes %>
+<% end -%>
 
 #################################
 # query-local-address	Source IP address for sending queries
 #
 # query-local-address=0.0.0.0
+<% if @query_local_address -%>
+query-local-address=<% @query_local_address %>
+<% end -%>
 
 #################################
 # query-local-address6	Source IPv6 address for sending queries
 #
 # query-local-address6=
+<% if @query_local_address6 -%>
+query-local-address6=<% @query_local_address6 %>
+<% end -%>
 
 #################################
 # quiet	Suppress logging of questions and answers
 #
+<% if @quiet -%>
+quiet=<% @quiet -%>
+<% else -%>
 quiet=yes
+<% end -%>
 
 #################################
 # remotes-ringbuffer-entries	maximum number of packets to store statistics for
 #
 # remotes-ringbuffer-entries=0
+<% if @remotes_ringbuffer_entries -%>
+remotes-ringbuffer-entries=<% @remotes_ringbuffer_entries -%>
+<% end -%>
 
 #################################
 # serve-rfc1918	If we should be authoritative for RFC 1918 private IP space
 #
 # serve-rfc1918=
+<% if @serve_rfc1918 -%>
+serve-rfc1918=<% @serve_rfc1918 %>
+<% end -%>
 
 #################################
 # server-id	Returned when queried for 'server.id' TXT or NSID, defaults to hostname
 #
 # server-id=
+<% if @server_id -%>
+server-id=<% @server_id -%>
+<% end -%>
 
 #################################
 # setgid	If set, change group id to this gid for more security
 #
+<% if @setgid -%>
+setgid=<% @setgid %>
+<% else -%>
 setgid=pdns
+<% end -%>
 
 #################################
 # setuid	If set, change user id to this uid for more security
 #
+<% if @setuid -%>
+setgid=<% @setuid %>
+<% else -%>
 setuid=pdns
+<% end -%>
 
 #################################
 # single-socket	If set, only use a single socket for outgoing queries
 #
 # single-socket=off
+<% if @single_socket -%>
+single-socket=<% @single_socket %>
+<% end -%>
 
 #################################
 # soa-minimum-ttl	Don't change
 #
 # soa-minimum-ttl=0
+<% if @soa_minimum_ttl -%>
+soa-minimum-ttl=<% @soa_minimum_ttl %>
+<% end -%>
 
 #################################
 # soa-serial-offset	Don't change
 #
 # soa-serial-offset=0
+<% if @soa_serial_offset -%>
+soa-serial-offset=<% @soa_serial_offset %>
+<% end -%>
 
 #################################
 # socket-dir	Where the controlsocket will live
 #
 # socket-dir=/var/run/
+<% if @socket_dir -%>
+socket-dir=<% @socket_dir %>
+<% end -%>
 
 #################################
 # socket-group	Group of socket
 #
 # socket-group=
+<% if @socket_group -%>
+socket-group=<% @socket_group %>
+<% end -%>
 
 #################################
 # socket-mode	Permissions for socket
 #
 # socket-mode=
+<% if @socket_mode -%>
+socket-mode=<% @socket_mode %>
+<% end -%>
 
 #################################
 # socket-owner	Owner of socket
 #
 # socket-owner=
+<% if @socket_owner -%>
+socket-owner=<% @socket_owner %>
+<% end -%>
 
 #################################
 # spoof-nearmiss-max	If non-zero, assume spoofing after this many near misses
 #
 # spoof-nearmiss-max=20
+<% if @spoof_nearmiss_max -%>
+spoof-nearmiss-max=<% @spoof_nearmiss_max -%>
+<% end -%>
 
 #################################
 # stack-size	stack size per mthread
 #
 # stack-size=200000
+<% if @stack_size -%>
+stack-size=<% @stack_size %>
+<% end -%>
 
 #################################
 # threads	Launch this number of threads
 #
 # threads=2
+<% if @threads -%>
+threads=<% @threads %>
+<% end -%>
 
 #################################
 # trace	if we should output heaps of logging
 #
 # trace=off
+<% if @trace -%>
+trace=<% @trace %>
+<% end -%>
 
 #################################
 # version-string	string reported on version.pdns or version.bind
 #
 # version-string=PowerDNS Recursor 3.3 $Id: pdns_recursor.cc 1712 2010-09-11 13:40:03Z ahu $
+<% if @version_string -%>
+version-string=<% @version_string %>
+<% end -%>
